@@ -16,8 +16,7 @@ typeset music. Here are some hints.
 <p>
 
 <ul>
-<li>Open a terminal window (Windows users: double click the "GNU LilyPond"
-or "Cygwin" icon), and type
+<li>Open a terminal window (Windows users: double click the "Cygwin" icon), and type
 
 <pre>
      lilypond --help
@@ -100,7 +99,7 @@ in the "Courtesy" column <a href="index.html">on the download page</a>
 <p>
 
 Windows users: run
-the cywgin terminal (double click the Cygwin or LilyPond icon), and
+the cywgin terminal (double click the Cygwin icon), and
 run
 
 <pre>
